src/test/deca/codegen/invalid/class/overflow/overflow_call.deca
// Description:
//    Tests de débordement de la pile
//
// Resultats:
//   ima_output: stack overflow
// 

class Socrate{
    void overflow(){
    		overflow();
    }
}

{
    Socrate s = new Socrate();
    s.overflow();
}

